# py-vault-watchdir

./: README.md  pyproject.toml  requirements.txt  watch_directory_change.py
.github/workflows/: ci.yml
tests/: test_watch_directory_change.py
